UX fix, showing scrollbar in filter dropdown on my-projects page to hint at more content

--- a/resources/assets/sass/_page-my-projects.scss
+++ b/resources/assets/sass/_page-my-projects.scss
@@ -1,4 +1,16 @@
 .page-my-projects {
+  /* Overwrite the default to keep the scrollbar always visible */
+
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  }
   .dropdown-header {
     color: $deep-purple;
     font-weight: bold;
